--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "denmartins.jpg"
-  name             : "Denis Martins, Ph.D."
+  name             : "Denis Martins"
   pronouns         : # example: "she/her"  
   bio              : "I am a passionate AI esearcher working on data-intense systems and machine learning."
   location         : "Brazil"
