--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : denmartinsphd
+  instagram        : denismartinsphd
   lastfm           : # Username
   linkedin         : # Username
   mastodon         : # URL
