--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Denis Martins, Ph.D."
 title_separator          : "-"
 name                     : &name "Denis Martins"
-description              : &description "I am a passionate AI researcher working on data-intense systems and machine learning."
+description              : &description "I am a professor and AI researcher working on data-intense systems and machine learning."
 url                      : https://denmartins.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -24,9 +24,9 @@ author:
   avatar           : "denmartins.jpg"
   name             : "Denis Martins"
   pronouns         : # example: "she/her"  
-  bio              : "I am a passionate AI researcher working on data-intense systems and machine learning."
+  bio              : "I am a professor and AI researcher working on data-intense systems and machine learning."
   location         : "Brazil"
-  employer         : "Samsung Research Brazil"
+  employer         : "PUC-Campinas"
   uri              : # URL
   email            : #"none@example.org" 
 
