--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  #instagram        : denismartinsphd
+  instagram        : # Username
   lastfm           : # Username
   linkedin         : denismlmartins
   mastodon         : # URL
