--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "denmartins.jpg"
   name             : "Denis Martins"
   pronouns         : # example: "she/her"  
-  bio              : #"I am a professor working on data science and artificial intelligence."
+  bio              : "I am a professor working on data science and artificial intelligence."
   location         : "Brazil"
   employer         : "University of São Paulo (USP)"
   uri              : # URL
